--- a/css/style.css
+++ b/css/style.css
@@ -8986,6 +8986,23 @@ section .cont_info span {
     width: 100%;
 }
 
+.whats-app {
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    bottom: 20px;
+    background-color: #25d366;
+    color: #FFF;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 3px 4px 3px #999;
+    right: 15px;
+    z-index: 100;
+}
 
+.my-float {
+    margin-top: 10px;
+}
 
 
