--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ button {
 .bt_main {
     color: #1b1b1b;
     font-size: 17px;
-    min-width: 230px;
+    min-width: auto;
     float: left;
     text-align: center;
     height: 50px;
@@ -1364,7 +1364,7 @@ section .social_icons {
 }
 
 .left_blog_top h3 {
-    font-size: 95px;
+    font-size: 6rem;
     color: #F3EEEA;
     text-transform: uppercase;
     font-family: 'Righteous', cursive;
@@ -1373,10 +1373,10 @@ section .social_icons {
 }
 
 .left_blog_top {
-    /* background: #f7f8f8; */
+    background: rgba(0, 0, 0, .3);
     width: 815px;
     height: 585px;
-    padding-left: 220px;
+    /* padding-left: 220px; */
     top: 0;
     left: 0;
     z-index: 9;
@@ -8634,11 +8634,10 @@ img[data-toggle="modal"] {
 .back_blog img {
     position: relative;
     z-index: 1;
-}
-
-.back_blog img {
     width: auto;
     float: right;
+    height: 735px;
+    width: 550px;
 }
 
 form button {
@@ -9019,4 +9018,50 @@ left: 0;
 height: 100%;
 width: 4px; /* Adjust the width of the decorative line */
 background-color: #3498db; /* Adjust the color of the decorative line */
+}
+
+@media (max-width: 1200px) {
+
+    .left_blog_top {
+        width: 100%;
+        height: 480px;
+    }
+
+    .left_blog_top h3 {
+        font-size: 3rem;
+        line-height: 3rem;
+        text-align: center;
+    }
+
+    .left_blog_top p {
+        font-size: 17px;
+        text-align: center;
+    }
+
+    #whyUs .container {
+        min-height: auto !important;
+    }
+
+    #theme .container {
+        min-height: auto !important;
+    }
+
+    footer {
+        background-color: #f5f2f0;
+        padding: 0px; 
+    }
+    
+    footer .container-fluid {
+        background: #2d2d2d;
+        min-height: 455px;
+        border-radius: 0px;
+        margin-bottom: 0px;
+    }
+
+    .cont_info {
+        display: flex;
+        justify-content: start;
+        align-items: center;
+    }
+    
 }
